// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Email template snapshots > EMAIL-09: contactNotificationEmail snapshot is stable 1`] = `
"
<!DOCTYPE html>
<html lang="nl">
<head><meta charset="UTF-8" /></head>
<body style="margin: 0; padding: 0; background-color: #F1F5F9; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #F1F5F9; padding: 32px 16px;">
    <tr>
      <td align="center">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">

          <!-- Header -->
          <tr>
            <td style="background-color: #1D5C6B; padding: 28px 32px; text-align: center;">
              <h1 style="color: white; font-family: Georgia, 'Times New Roman', serif; margin: 0; font-size: 22px; font-weight: 700; letter-spacing: 0.5px;">
                Al-Fath Moskee
              </h1>
            </td>
          </tr>

          <!-- Body -->
          <tr>
            <td style="background-color: #FFFFFF; padding: 32px;">
              
    <p style="font-size: 14px; color: #64748B; margin: 0 0 20px; line-height: 1.5;">
      Er is een nieuw bericht ontvangen via het contactformulier op uw website.
    </p>

    <!-- Data tabel -->
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border: 1px solid #E2E8F0; border-left: 3px solid #1D5C6B; margin-bottom: 24px;">
      
    <tr>
      <td style="padding: 10px 12px; font-size: 13px; color: #64748B; border-bottom: 1px solid #F1F5F9; width: 120px; vertical-align: top; font-weight: 600;">
        Naam
      </td>
      <td style="padding: 10px 12px; font-size: 14px; color: #1E293B; border-bottom: 1px solid #F1F5F9;">
        Test User
      </td>
    </tr>
      
    <tr>
      <td style="padding: 10px 12px; font-size: 13px; color: #64748B; border-bottom: 1px solid #F1F5F9; width: 120px; vertical-align: top; font-weight: 600;">
        E-mail
      </td>
      <td style="padding: 10px 12px; font-size: 14px; color: #1E293B; border-bottom: 1px solid #F1F5F9;">
        <a href="mailto:user%40test.be" style="color: #1D5C6B; text-decoration: none;">user@test.be</a>
      </td>
    </tr>
      
    <tr>
      <td style="padding: 10px 12px; font-size: 13px; color: #64748B; border-bottom: 1px solid #F1F5F9; width: 120px; vertical-align: top; font-weight: 600;">
        Telefoon
      </td>
      <td style="padding: 10px 12px; font-size: 14px; color: #1E293B; border-bottom: 1px solid #F1F5F9;">
        <span style="color: #CBD5E1;">Niet opgegeven</span>
      </td>
    </tr>
      
    <tr>
      <td style="padding: 10px 12px; font-size: 13px; color: #64748B; border-bottom: 1px solid #F1F5F9; width: 120px; vertical-align: top; font-weight: 600;">
        Onderwerp
      </td>
      <td style="padding: 10px 12px; font-size: 14px; color: #1E293B; border-bottom: 1px solid #F1F5F9;">
        <span style="color: #CBD5E1;">Algemeen</span>
      </td>
    </tr>
    </table>

    <!-- Bericht -->
    <div style="background-color: #FBF9F7; border: 1px solid #E2E8F0; border-left: 3px solid #C9A983; padding: 16px; margin-bottom: 20px;">
      <p style="font-size: 12px; color: #94A3B8; margin: 0 0 8px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px;">Bericht</p>
      <p style="font-size: 14px; color: #334155; margin: 0; line-height: 1.7; white-space: pre-wrap;">Test bericht voor snapshot.</p>
    </div>

    <!-- CTA -->
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
      <tr>
        <td align="center" style="padding-top: 8px;">
          <a href="mailto:user%40test.be?subject=Re: Contactformulier"
             style="display: inline-block; background-color: #1D5C6B; color: white; padding: 12px 28px; font-size: 13px; font-weight: 700; text-decoration: none; letter-spacing: 0.3px;">
            Beantwoorden
          </a>
        </td>
      </tr>
    </table>
            </td>
          </tr>

          <!-- Footer -->
          <tr>
            <td style="padding: 20px 32px; text-align: center; background-color: #FBF9F7; border-top: 1px solid #E2E8F0;">
              <p style="margin: 0; font-size: 11px; color: #94A3B8; line-height: 1.6;">
                Verstuurd via <span style="color: #C9A983; font-weight: 600;">Het Digitale Waqf</span> voor Al-Fath Moskee
                <br /><a href="mailto:info@alfath.be" style="color: #1D5C6B; text-decoration: none;">info@alfath.be</a>
              </p>
            </td>
          </tr>

        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;

exports[`Email template snapshots > EMAIL-10: donationConfirmationEmail snapshot is stable 1`] = `
"
<!DOCTYPE html>
<html lang="nl">
<head><meta charset="UTF-8" /></head>
<body style="margin: 0; padding: 0; background-color: #F1F5F9; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #F1F5F9; padding: 32px 16px;">
    <tr>
      <td align="center">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">

          <!-- Header -->
          <tr>
            <td style="background-color: #1D5C6B; padding: 28px 32px; text-align: center;">
              <h1 style="color: white; font-family: Georgia, 'Times New Roman', serif; margin: 0; font-size: 22px; font-weight: 700; letter-spacing: 0.5px;">
                Al-Fath Moskee
              </h1>
            </td>
          </tr>

          <!-- Body -->
          <tr>
            <td style="background-color: #FFFFFF; padding: 32px;">
              
    <p style="font-size: 16px; line-height: 1.6; color: #334155;">Assalamu Alaikum,</p>
    <p style="font-size: 16px; line-height: 1.6; color: #334155;">
      Bedankt voor uw gulle donatie aan <strong>Al-Fath Moskee</strong>.
      Uw bijdrage maakt een verschil voor onze gemeenschap.
    </p>
    <div style="background: white; border: 1px solid #E5E7EB; border-left: 3px solid #C9A983; padding: 20px; margin: 24px 0;">
      <table style="width: 100%; font-size: 14px;">
        <tr>
          <td style="padding: 8px 0; color: #6B7280;">Bedrag</td>
          <td style="padding: 8px 0; text-align: right; font-weight: bold; font-size: 18px; color: #1D5C6B;">&euro;50.00</td>
        </tr>
        <tr>
          <td style="padding: 8px 0; color: #6B7280;">Bestemming</td>
          <td style="padding: 8px 0; text-align: right; font-weight: 500;">Algemene Sadaqa</td>
        </tr>
      </table>
    </div>
    <p style="font-size: 14px; color: #6B7280; text-align: center; font-style: italic; margin-top: 24px;">
      "De rijkdom van een persoon wordt niet verminderd door Sadaqah."
      <br /><span style="color: #C9A983; font-weight: 600;">— Sahih Muslim 2588</span>
    </p>
            </td>
          </tr>

          <!-- Footer -->
          <tr>
            <td style="padding: 20px 32px; text-align: center; background-color: #FBF9F7; border-top: 1px solid #E2E8F0;">
              <p style="margin: 0; font-size: 11px; color: #94A3B8; line-height: 1.6;">
                Verstuurd via <span style="color: #C9A983; font-weight: 600;">Het Digitale Waqf</span> voor Al-Fath Moskee
                <br /><a href="mailto:info@alfath.be" style="color: #1D5C6B; text-decoration: none;">info@alfath.be</a>
              </p>
            </td>
          </tr>

        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;
